--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,16 @@
 .portalButton {
  background-image: url(./Assets/portal.gif);
 }
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+  opacity: 0;
+}
