--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -10,6 +10,14 @@
     text-align: center;
 }
 
+p::first-letter {
+  text-transform: capitalize;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
 /* #ADVmodal {
     /* overlay: {
         //   alignSelf: 'center',
