--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  text-emphasis: none;
 }
 
 .ReactModal__Overlay {
@@ -15,4 +16,8 @@
   opacity: 0;
 }
 
+a {
+  text-decoration: none;
+  color: black
+}
 
