--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,7 @@ a {
   cursor: pointer;
   font-size: 1em;
   text-align: center;
+  margin-right: .5em;
 }
 
 .searchButton{
@@ -267,4 +268,20 @@ a {
 
 .pointer {
   cursor: pointer;
+}
+
+.flexWrapper{
+  display: flex;
+  justify-content: space-evenly;
+  animation: fadeIn 2s;
+  -webkit-animation: fadeIn 2s;
+  -moz-animation: fadeIn 2s;
+  -o-animation: fadeIn 2s;
+  -ms-animation: fadeIn 2s;
+}
+
+.flexCol{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
